<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@id/homeFragment"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/title_home" />

    <item
            android:id="@id/friendDetailsFragment"
            android:icon="@drawable/ic_friends_black_24dp"
            android:title="@string/title_friend" />

    <item
            android:id="@id/profileDetailsFragment"
            android:icon="@drawable/ic_profile_black_24dp"
            android:title="@string/title_profile" />

    <item
            android:id="@+id/notificationFragment"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/title_notifications" />

</menu>