<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data class="LoginActivityBinding">
        <import type="android.view.View"/>
        <variable name="viewModel" type="com.event.reminder.ui.login.LoginViewModel"/>
    </data>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/fadeGreen">

        <android.support.constraint.ConstraintLayout
                style="@style/RoundedContainer"
                android:id="@+id/container"
                android:elevation="@dimen/_7sdp"
                android:layout_margin="@dimen/_20sdp"
                android:layout_centerInParent="true">

            <android.support.design.widget.TextInputLayout
                    style="@style/TextInputLayoutAppearance"
                    android:id="@+id/il_username"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                <EditText
                        style="@style/AppTheme.EditText"
                        android:id="@+id/et_username"
                        android:hint="@string/email_id"
                        android:inputType="textEmailAddress"
                        android:text="@={viewModel.userName}"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    style="@style/TextInputLayoutAppearance"
                    android:id="@+id/il_password"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/il_username">

                <EditText
                        style="@style/AppTheme.EditText"
                        android:id="@+id/et_password"
                        android:hint="@string/prompt_password"
                        android:text="@={viewModel.password}"
                        android:imeActionLabel="@string/sign_in"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"/>
            </android.support.design.widget.TextInputLayout>

            <TextView
                    style="@style/AppTheme.TextView.Link"
                    android:id="@+id/tv_forget_password"
                    app:layout_constraintTop_toBottomOf="@id/il_password"
                    app:layout_constraintEnd_toEndOf="@id/il_password"
                    app:layout_constraintStart_toStartOf="@id/il_password"
                    android:text="@string/forget_password"
                    android:onClick="@{(v) -> viewModel.forgetPassword()}"
                    app:layout_constraintHorizontal_bias="1.0"/>

            <Button
                    style="@style/AppTheme.Button"
                    android:id="@+id/bt_login"
                    android:enabled="@{viewModel.valid}"
                    android:text="@string/sign_in"
                    android:onClick="@{(v) -> viewModel.login()}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_forget_password"/>

            <TextView
                    style="@style/AppTheme.TextView.Link"
                    app:layout_constraintTop_toBottomOf="@id/bt_login"
                    android:onClick="@{(v) -> viewModel.signUp()}"
                    android:text="@string/don_t_have_an_account"
                    android:layout_marginTop="@dimen/_5sdp"
                    app:layout_constraintStart_toStartOf="@id/container"
                    app:layout_constraintEnd_toEndOf="@id/container"/>

        </android.support.constraint.ConstraintLayout>
    </RelativeLayout>
</layout>
