<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data class="OTPVerificationFragmentBinding">
        <import type="android.view.View"/>
        <variable name="viewModel" type="com.event.reminder.ui.otp.OTPVerificationViewModel"/>
    </data>

<android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="@dimen/_24sdp"
        android:paddingEnd="@dimen/_24sdp"
        android:background="@color/fadeGreen"
        tools:context=".ui.otp.OTPVerificationFragment">

    <TextView
            android:id="@+id/tv_enter_otp_text"
            style="@style/AppTheme.TextView.Normal"
            android:text="@string/please_enter_otp"
            app:layout_constraintBottom_toTopOf="@id/et_otp_verification"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.8" />

    <com.event.reminder.widget.OTPInputEditText
            android:id="@+id/et_otp_verification"
            style="@style/AppTheme.EditText"
            android:cursorVisible="false"
            android:digits="1234567890"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:maxLength="6"
            android:text="@={viewModel.otpValue}"
            android:textIsSelectable="false"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/bt_submit"/>

    <TextView
            android:id="@+id/tv_resend_otp"
            style="@style/AppTheme.TextView.Link"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/resend_otp"
            android:onClick="onResendOTPClick"
            app:layout_constraintEnd_toEndOf="@id/et_otp_verification"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@id/et_otp_verification"
            app:layout_constraintTop_toBottomOf="@id/et_otp_verification" />

    <Button
            android:id="@+id/bt_submit"
            style="@style/AppTheme.Button"
            android:text="@string/submit"
            android:onClick="@{() -> viewModel.onSubmitClick()}"
            android:layout_marginBottom="@dimen/_50sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>


</android.support.constraint.ConstraintLayout>
</layout>
